[package]
name = "gdke"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1

[profile.debuga]
inherits = "release"
debug = true
strip = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "gdke-gui",
]

[dependencies]
poggers = {version = "*", path = "../poggers"}
