workspace = { members = ["gdkeinj"] }
[package]
name = "gdke"
version = "0.2.2"
edition = "2021"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1

[profile.debuga]
inherits = "release"
debug = true
strip = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [workspace]
# members = ["gdke-gui"]

[dependencies]
rust-embed = { version = "*", features = [
  "include-exclude",
  "interpolate-folder-path",
] }
anyhow = "*"
thiserror = "*"
windows = { features = [
  "Win32_Foundation",
  "Win32_System",
  "Wdk",
  "Wdk_System",
  "Wdk_System_Threading",
  "Win32_System_Threading",
  "Win32_System_Diagnostics",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Kernel",
  "Win32_System_ProcessStatus",
  "Win32_Security",
], version = "0.56" }
dll-syringe = "*"
poggers = { version = "*", git = "https://github.com/pozm/poggers.git" }
