[package]
name = "gdke-gui"
version = "0.1.5"
edition = "2021"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.3" }
poggers = {version = "*", path = "../../poggers"}
gdke = {path= ".."}