[package]
name = "gdkeinj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
poggers = { path = "../../poggers/poggers" }
poggers-derive = { git = "https://github.com/pozm/poggers.git" }
retour = { version = "0.3.1", features = ["static-detour"] }
